# openrgb-ruler

./: .gitignore  Cargo.toml  PKGBUILD  README.md  openrgb-ruler-gtk.desktop  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: install.sh  openrgb-lock-monitor.service  openrgb-lock-monitor.sh
src/: App.css  App.tsx  app_state.rs  autostart.rs  config.rs  main.rs  model.rs  openrgb.rs  tray.rs  types.ts  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  openrgb.rs  watcher.rs
src/components/: ActionSelector.tsx  ColorPicker.tsx  DevicePicker.tsx  ProfilePicker.tsx  RuleEditor.tsx  RuleList.tsx  StatusBar.tsx  TriggerSelector.tsx
src/hooks/: useAutostart.ts  useOpenRgb.ts  useRules.ts
src/ui/: mod.rs  rule_list.rs  rule_row.rs  window.rs
src/ui/rule_editor/: action_selector.rs  device_selector.rs  mod.rs  trigger_selector.rs
