[package]
name = "openrgb-ruler-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
relm4 = { version = "0.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
ksni = "0.2"
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
